--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "author": "Michael Hanus <mh@informatik.uni-kiel.de>",
     "synopsis": "Library for dealing with URLs",
     "category": [ "Web" ],
-    "dependencies": { },
-    "exportedModules": [ "URL" ],
+    "dependencies": {
+        "base"    : ">= 1.0.0, < 2.0.0"
+    },
+    "exportedModules": [ "System.URL" ],
     "compilerCompatibility": {
-        "pakcs": ">= 1.14.0",
-        "kics2": ">= 0.5.0"
+        "pakcs": ">= 2.0.0, < 3.0.0",
+        "kics2": ">= 2.0.0, < 3.0.0"
     },
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
