--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
     "name": "url",
-    "version": "1.0.0",
+    "version": "3.0.0",
     "author": "Michael Hanus <mh@informatik.uni-kiel.de>",
     "synopsis": "Library for dealing with URLs",
     "category": [ "Web" ],
     "dependencies": {
-        "base"    : ">= 1.0.0, < 2.0.0"
+        "base"      : ">= 3.0.0, < 4.0.0",
+        "directory" : ">= 3.0.0, < 4.0.0",
+        "io-extra"  : ">= 3.0.0, < 4.0.0",
+        "process"   : ">= 3.0.0, < 4.0.0"
     },
     "exportedModules": [ "System.URL" ],
-    "compilerCompatibility": {
-        "pakcs": ">= 2.0.0, < 3.0.0",
-        "kics2": ">= 2.0.0, < 3.0.0"
-    },
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
     "source": {
