--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
         "base"      : ">= 3.0.0, < 4.0.0",
         "directory" : ">= 3.0.0, < 4.0.0",
+        "execpath"  : ">= 3.0.0, < 4.0.0",
+        "filepath"  : ">= 3.0.0, < 4.0.0",
         "io-extra"  : ">= 3.0.0, < 4.0.0",
         "process"   : ">= 3.0.0, < 4.0.0"
     },
