--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
     "source": {
-        "git": "https://git.ps.informatik.uni-kiel.de/curry-packages/url.git",
+        "git": "https://github.com/curry-packages/url.git",
         "tag": "$version"
     }
 }
